[package]
name = "httpavonz"
authors = ["Andrea Pavoni <andrea.pavoni@gmail.com>"]
version = "0.1.0"
edition = "2021"
rust-version = "1.63"
license = "MIT"

[profile.release]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async stuff
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Web & HTTP stuff
axum ={version = "0.6.0-rc.2", features = ["headers", "json"]}
tower-http = { version = "0.3.0", features = ["trace", "set-header", "cors"] }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


